--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bignumber.js": "^9.0.0",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.10.1",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "serverless-offline": "^8.2.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.15.4",
