--- a/src/v2/blocks/.graphqlconfig
+++ b/src/v2/blocks/.graphqlconfig
@@ -4,7 +4,7 @@
   "extensions": {
     "endpoints": {
       "Ethereum Blocks": {
-        "url": "https://api.thegraph.com/subgraphs/name/blocklytics/ethereum-blocks",
+        "url": "https://thegraph.kcc.network/subgraphs/name/kcc-blocks",
         "headers": {
           "user-agent": "JS GraphQL"
         },
